reducing debug output and adding ISF to personal profile

--- a/app/src/main/res/layout/activity_personal_profile.xml
+++ b/app/src/main/res/layout/activity_personal_profile.xml
@@ -19,7 +19,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Absorption (CAR)"
                 android:id="@+id/textView_CAR" />
 
@@ -31,10 +31,12 @@
                 android:id="@+id/editText_CAR"
                 android:layout_weight="1"
                 android:hint="30.0"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -49,27 +51,29 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Carb Delay (minutes)"
-                android:id="@+id/textView_CarbDelay" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Sensitivity (ISF)"
+                android:id="@+id/textView_ISFLabel" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:ems="10"
-                android:id="@+id/editText_CarbDelay"
+                android:id="@+id/editText_ISF"
                 android:layout_weight="1"
-                android:hint="20"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:hint="40.0"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
-                android:id="@+id/button_SetCarbDelay"
-                android:onClick="editCarbDelayClicked" />
+                android:id="@+id/button_SetISF"
+                android:onClick="editISFClicked" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
@@ -79,7 +83,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="BG Target max:"
                 android:id="@+id/textView_Label_BGMax" />
 
@@ -90,11 +94,13 @@
                 android:ems="10"
                 android:id="@+id/editText_BGMax"
                 android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:hint="125"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -109,7 +115,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="BG Target (mg/dL):"
                 android:id="@+id/textView_Label_TargetBG" />
 
@@ -120,11 +126,13 @@
                 android:ems="10"
                 android:id="@+id/editText_TargetBG"
                 android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:hint="115"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -139,7 +147,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="BG Target min:"
                 android:id="@+id/textView_Label_BGMin" />
 
@@ -150,11 +158,13 @@
                 android:ems="10"
                 android:id="@+id/editText_BGMin"
                 android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:hint="95"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -169,7 +179,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Max Tmp Basal Rate:"
                 android:id="@+id/textView_Label_MaxTmpBasalRate" />
 
@@ -180,11 +190,13 @@
                 android:ems="10"
                 android:id="@+id/editText_MaxTmpBasalRate"
                 android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:hint="6.1"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -200,7 +212,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Low BG Suspend:"
                 android:id="@+id/textView_LowBGSuspend"
                 android:singleLine="true" />
@@ -212,11 +224,13 @@
                 android:ems="10"
                 android:id="@+id/editText_LowBGSuspend"
                 android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:hint="85.0"
                 android:gravity="right"
                 android:singleLine="true" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -232,7 +246,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Normal DIA table:"
                 android:id="@+id/textView_NormalDIATable"
                 android:singleLine="true"
@@ -244,6 +258,7 @@
                 android:id="@+id/spinner_NormalDIATable" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
@@ -258,7 +273,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Negative DIA table:"
                 android:id="@+id/textView_NegativeDIATable"
                 android:singleLine="true"
@@ -270,6 +285,7 @@
                 android:id="@+id/spinner_NegativeDIATable" />
 
             <Button
+                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Set"
