Added ability to turn off and on the generation of logfiles

--- a/app/src/main/res/layout/activity_rtdemo_settings.xml
+++ b/app/src/main/res/layout/activity_rtdemo_settings.xml
@@ -61,6 +61,19 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Logging Settings"
+                android:id="@+id/button_LoggingSettings"
+                android:onClick="launchLoggingSettingsActivity" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Utilities"
                 android:id="@+id/button_Utilities"
                 android:onClick="launchUtilityActivity" />
