--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,9 @@
 
                 <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:orientation="vertical">
+                    android:layout_height="79dp"
+                    android:orientation="vertical"
+                    android:id="@+id/">
 
                     <TextView
                         android:id="@+id/textView_StatusTitle"
@@ -45,6 +46,12 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="left|bottom"
                         android:text="Starting..."
+                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                    <TextView
+                        android:id="@+id/textView_StatusBattery"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 </LinearLayout>
