--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,7 @@
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="79dp"
-                    android:orientation="vertical"
-                    android:id="@+id/">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/textView_StatusTitle"
