--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -66,10 +66,10 @@
     <string name="pref_summary_meter_bg">Meter BGs used to calibrate</string>
 
     <string name="pref_title_sensor_data">Sensor Data</string>
-    <string name="pref_summary_sensor_data">Raw ISIG data from sensor</string>
+    <string name="pref_summary_sensor_data">Raw ISIG data from sensorReading</string>
 
     <string name="pref_title_cal_data">Calibration Data</string>
-    <string name="pref_summary_cal_data">Calibration data used in converting sensor ISIG values to glucose values</string>
+    <string name="pref_summary_cal_data">Calibration data used in converting sensorReading ISIG values to meterReading values</string>
 
     <!-- Settings for Display Options -->
     <string name="pref_header_display_options">Display Options</string>
